--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -3,3 +3,11 @@
 
 <p>This is my FIRST web page!</p>
 <p>Isn't it NICE?</p>
+
+<p>Here are some things that I'm going to learn about coding:</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And A Lot More!</li>
+</ul>
