add final, official HTML elements DOCTYPE, head, title, body

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,13 +1,21 @@
-<h1>My First Web Page</h1>
-<h2>Written with the guidance of Epicodus</h2>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <title>Web Page #1</title>
+</head>
+<body>
+  <h1>My First Web Page</h1>
+  <h2>Written with the guidance of Epicodus</h2>
 
-<p>This is my FIRST web page!</p>
-<p>Isn't it NICE?</p>
+  <p>This is my FIRST web page!</p>
+  <p>Isn't it NICE?</p>
 
-<p>Here are some things that I'm going to learn about coding:</p>
-<ul>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>JavaScript</li>
-  <li>And A Lot More!</li>
-</ul>
+  <p>Here are some things that I'm going to learn about coding:</p>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And A Lot More!</li>
+  </ul>
+</body>
+</html>  
