added links and picture

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,10 +5,14 @@
 </head>
 <body>
   <h1>My First Web Page</h1>
-  <h2>Written with the guidance of Epicodus</h2>
+  <h2>Written with the guidance of <em>Epicodus</em></h2>
+  <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
 
-  <p>This is my FIRST web page!</p>
+  <p>This is my <strong>FIRST</strong> web page!</p>
   <p>Isn't it NICE?</p>
+  <p>Here is a link to my <a href="favorite-things.html">favorite things</a></p>
+
+  <img src="img/laser cat.jfif" alt="It's Laser Cats.">
 
   <p>Here are some things that I'm going to learn about coding:</p>
   <ul>
